fix(docker): register kill runnable earlier